<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/my_proposals"
            android:id="@+id/menu_main_userlist"
            android:showAsAction="never"
            android:orderInCategory="1"
            android:icon="@android:drawable/ic_menu_agenda"/>
    <item
            android:title="@string/download_db"
            android:id="@+id/menu_main_download"
            android:showAsAction="ifRoom"
            android:orderInCategory="2"
            android:icon="@drawable/ic_action_refresh"/>
    <item
            android:title="@string/settings"
            android:id="@+id/menu_user_settings"
            android:showAsAction="never"
            android:orderInCategory="3"
            android:icon="@android:drawable/ic_menu_preferences"/>
</menu>