<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginRight="15dp"
              android:layout_marginTop="15dp"
              android:paddingLeft="15dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_et_username"
            />


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_et_password"
            android:inputType="textPassword"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/login_bt_ok"
            android:text="@string/login_ok"
            style="@style/button_ok"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:gravity="center_horizontal"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_register"
            android:id="@+id/login_bt_register"
            style="@style/button_register"/>
</LinearLayout>