<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/about_iv_app"
                android:src="@drawable/ic_launcher"
                android:contentDescription="Alcohol Logo"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_copyright"
                android:id="@+id/textView"
                android:gravity="center_horizontal"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_license"
                android:id="@+id/about_tv_license"
                android:gravity="center_horizontal"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_bt_license"
                android:id="@+id/about_bt_license"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/link_apache_license"
                android:linksClickable="true"
                android:autoLink="web"
                android:gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>