<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <item
            android:title="@string/editor"
            android:id="@+id/menu_user_editor"
            android:showAsAction="ifRoom"
            android:orderInCategory="1"
            android:icon="@android:drawable/ic_menu_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <item
            android:title="@string/upload_proposals"
            android:id="@+id/menu_user_upload_data"
            android:showAsAction="ifRoom"
            android:orderInCategory="2"
            android:icon="@android:drawable/ic_menu_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <item
            android:title="@string/settings"
            android:id="@+id/menu_user_settings"
            android:showAsAction="never"
            android:orderInCategory="3"
            android:icon="@android:drawable/ic_menu_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</menu>