<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"

            android:paddingLeft="10dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_email"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/report_et_user"
                android:hint="someone@example.com"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_bug_title"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/report_et_title"
                android:hint="np. Crash głównej bazy"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_bug_type"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bug_kind"
                android:id="@+id/report_sr_type"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_bug_priority"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bug_priority"
                android:id="@+id/report_sr_priority"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_bug_description"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/report_et_description"
                android:lines="4"
                android:hint=""/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/report_bt_send"
                android:text="@android:string/ok"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                style="@style/button_ok"/>
    </LinearLayout>


</ScrollView>