<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!--android:background="@drawable/alcohol_info_bg">-->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="Harnaś"
                android:id="@+id/alcoholinfo_et_name"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:text="Niskoprocentowe"
                android:id="@+id/alcoholinfo_et_type"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:text="Piwo jasne"
                android:id="@+id/alcoholinfo_et_subtype"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:stretchColumns="0,1,2,3,4">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/price"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alcoholinfo_et_price"
                        android:text="2.60zł"/>

                <TextView
                        android:text="@string/volume"
                        android:paddingRight="5dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alcoholinfo_et_volume"
                        android:text="500ml"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                <TextView
                        android:text="@string/percent"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alcoholinfo_et_percent"
                        android:text="6%"/>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deposit"/>

                <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alcoholinfo_cb_deposit"
                        android:enabled="true"
                        android:clickable="false"/>
            </TableRow>
        </TableLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginBottom="2dp"
                android:background="@android:drawable/divider_horizontal_bright"/>
        <!-- ================================================================= -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/alcoholinfo_rate_alcohol"/>

        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="?android:attr/ratingBarStyle"
                android:numStars="5"
                android:stepSize="1"
                android:id="@+id/alcoholinfo_rb_rate"/>
        <!-- ================================================================= -->
        <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginBottom="6dp"
                android:background="@android:drawable/divider_horizontal_bright"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/alcoholinfo_opinions"
                android:textStyle="italic"
                android:textSize="17sp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/alcoholinfo_linear_ratings"
                android:orientation="vertical"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp">

            <Button
                    android:layout_width="115sp"
                    android:layout_height="34sp"
                    android:textSize="12sp"
                    android:text="@string/alcoholinfo_see_more"
                    android:enabled="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/alcoholinfo_bt_more"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>